force-app/main/default/objects/NPX_Survey_Record__c.object
<CustomObject>
    <description>Custom object to store all Survey Records created by Nomination</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer1__c</fullName>
        <description>Updated to fix issue with Qualtrics sync. 02114481</description>
        <label>Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer2__c</fullName>
        <description>Updated to fix issue with Qualtrics sync. 02114481</description>
        <label>Answer 2</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer3__c</fullName>
        <description>Updated to fix issue with Qualtrics sync. 02114481</description>
        <label>Answer 3</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_10__c</fullName>
        <label>Answer 10</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_11__c</fullName>
        <label>Answer 11</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_12__c</fullName>
        <label>Answer 12</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_2_1__c</fullName>
        <label>Answer 2.1</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_2_2__c</fullName>
        <label>Answer 2.2</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_2_3__c</fullName>
        <label>Answer 2.3</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avetta_ID__c</fullName>
        <label>Avetta ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Sites__c</fullName>
        <label>Billable Sites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Last_Updated_Date__c</fullName>
        <label>Case Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Office__c</fullName>
        <description>Created for case: 02714078</description>
        <formula>Case__r.Owner:User.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Full_Name__c</fullName>
        <label>Client Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Professionalism__c</fullName>
        <label>Courtesy &amp; Professionalism</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Date__c</fullName>
        <label>First Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow-up Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPX_Survey_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_1_node_code__c</fullName>
        <label>Hierarchy 1 node code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent_Date__c</fullName>
        <label>Invitation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <label>Knowledge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Expiration__c</fullName>
        <label>Member Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Since_Ignoring_Reactivation__c</fullName>
        <label>Member Since Ignoring Reactivation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <formula>VALUE(Answer1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPX_Contact_Record_ID__c</fullName>
        <label>NPX Contact Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPX_Followup_Updated_Status__c</fullName>
        <label>NPX Followup Updated Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPX_Followup_Updated__c</fullName>
        <label>NPX Followup Updated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPX_Survey_Record_Created_Status__c</fullName>
        <label>NPX Survey Record Created Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPX_Survey_Record_Created__c</fullName>
        <label>NPX Survey Record Created</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paying_Facilities__c</fullName>
        <label>Paying Facilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Identifier__c</fullName>
        <label>Person Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Comment__c</fullName>
        <label>Primary Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Score__c</fullName>
        <label>Primary Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 12</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_2_1__c</fullName>
        <label>Question 2.1</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_2_2__c</fullName>
        <label>Question 2.2</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_2_3__c</fullName>
        <label>Question 2.3</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_ID__c</fullName>
        <inlineHelpText>Unique ID for each Qualtrics survey response.</inlineHelpText>
        <label>Response ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Received_Date__c</fullName>
        <label>Response Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Date__c</fullName>
        <label>Second Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Details_URL__c</fullName>
        <label>Survey Details URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <label>Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <label>Tenure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Reminder_Date__c</fullName>
        <label>Third Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vetify__c</fullName>
        <label>Vetify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPX Survey Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Hierarchy_1_node_code__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Description__c</columns>
        <columns>NPX_Contact_Record_ID__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>contains</operation>
            <value>Template</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Satmetrix_View</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>NPX_Contact_Record_ID__c</columns>
        <columns>Campaign__c</columns>
        <columns>Case__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Description__c</columns>
        <columns>Primary_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>Satmetrix View</label>
    </listViews>
    <nameField>
        <label>NPX Survey Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPX Survey Records</pluralLabel>
    <recordTypes>
        <fullName>Transaction_Survey</fullName>
        <active>true</active>
        <label>Transaction Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>